fixed arabic blog

--- a/public/about_ar/index.html
+++ b/public/about_ar/index.html
@@ -17,8 +17,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#007fff" />
   
-  <title>About &middot; Mohamed Abouzid</title>
-    <meta name="title" content="About &middot; Mohamed Abouzid" />
+  <title>حولي &middot; Mohamed Abouzid</title>
+    <meta name="title" content="حولي &middot; Mohamed Abouzid" />
   
   
   
@@ -94,14 +94,14 @@
   
   <meta property="og:url" content="http://localhost:1313/about_ar/">
   <meta property="og:site_name" content="Mohamed Abouzid">
-  <meta property="og:title" content="About">
+  <meta property="og:title" content="حولي">
   <meta property="og:description" content="Personal website of Mohamed Abouzid">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
 
   
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="About">
+  <meta name="twitter:title" content="حولي">
   <meta name="twitter:description" content="Personal website of Mohamed Abouzid">
 
   
@@ -254,7 +254,7 @@
     <header>
       
       <h1 class="mt-0 text-4xl font-extrabold text-neutral-900 dark:text-neutral">
-        About
+        حولي
       </h1>
     </header>
     <section class="prose mt-6 max-w-full dark:prose-invert">
