changed youtube link

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -131,7 +131,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "238"
+    "wordCount": "239"
   }
   </script>
     <script type="application/ld+json">
@@ -411,7 +411,7 @@
       </h1>
     </header>
     <section class="prose mt-6 max-w-full dark:prose-invert">
-      <h3 id="hey-" class="relative group">Hey 👋 </h3><p>My name is Mohamed Abouzid, and I&rsquo;m currently located in <a href="https://maps.app.goo.gl/PKU9iqXVBTLBE3Yd9" target="_blank" rel="noreferrer">Hamburg, Germany</a>. I am a machine learning enthusiast with a focus on bioinformatics and biological networks. Currently, I am working on my Master’s thesis at the University of Hamburg in the <a href="https://www.cosy.bio/" target="_blank" rel="noreferrer">CosyBio</a> lab, where we&rsquo;re expanding the development of <a href="https://apps.cosy.bio/StrucTFactor/" target="_blank" rel="noreferrer">StrucTFactor</a>, a software that leverages neural networks for biological network analysis and transcription factor prediction. My research explores how deep learning can be applied to understand gene regulation and transcriptional control.</p>
+      <h3 id="hey-friend-" class="relative group">Hey friend 👋 </h3><p>My name is Mohamed Abouzid, and I&rsquo;m currently located in <a href="https://maps.app.goo.gl/PKU9iqXVBTLBE3Yd9" target="_blank" rel="noreferrer">Hamburg, Germany</a>. I am a machine learning enthusiast with a focus on bioinformatics and data science. Currently, I am working on my Master’s thesis at the University of Hamburg in the <a href="https://www.cosy.bio/" target="_blank" rel="noreferrer">CosyBio</a> lab, where we&rsquo;re expanding the development of <a href="https://apps.cosy.bio/StrucTFactor/" target="_blank" rel="noreferrer">StrucTFactor</a>, a software that leverages neural networks for biological network analysis and transcription factor prediction. My research explores how deep learning can be applied to understand gene regulation and transcriptional control.</p>
 <p>Previously, I worked on single-cell RNA sequencing analysis. During this time, I studied immune and fat cells to investigate their relationship with metabolic factors and disease development. My work combined computational biology with data science to extract meaningful insights from large-scale sequencing data.</p>
 <p>My interests lie at the intersection of data science, biological networks, and systems biology, and I am passionate about leveraging computational tools to drive discoveries in life sciences.</p>
 <p>Originally from Egypt, I moved to Germany to start my career as a pharmacist before following my passion for bioinformatics. This led me to pursue a Master’s degree in Bioinformatics at <a href="https://www.uni-giessen.de/en/index" target="_blank" rel="noreferrer">Justus-Liebig University</a> in Gießen. Beyond research, I create content on <a href="https://www.youtube.com/@MohamedAbouzidBio" target="_blank" rel="noreferrer">YouTube</a>, sharing insights on studying in Germany and bioinformatics, along with practical advice for international students and expats navigating life in Germany. You can find more about my projects on my <a href="https://github.com/MohamedAbouzid1" target="_blank" rel="noreferrer">GitHub</a> and read about my experiences on my <a href="">blog</a>.</p>
