--- a/public/ar/about.ar/index.html
+++ b/public/ar/about.ar/index.html
@@ -134,7 +134,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "201"
+    "wordCount": "172"
   }
   </script>
     <script type="application/ld+json">
@@ -412,10 +412,10 @@
       </h1>
     </header>
     <section class="prose mt-6 max-w-full dark:prose-invert">
-      <h3 id="أهلا-بيك-" class="relative group">أهلا بيك 👋 </h3><p>أنا محمد أبو زيد، عايش حاليًا في <a href="https://maps.app.goo.gl/PKU9iqXVBTLBE3Yd9" target="_blank" rel="noreferrer">هامبورغ، ألمانيا</a>. بحب جدًا تعلم الآلة، واهتمامي الأساسي بالمعلوماتية الحيوية والشبكات البيولوجية. دلوقتي بشتغل على رسالة الماجستير بتاعتي في <a href="https://www.cosy.bio/" target="_blank" rel="noreferrer">مختبر CosyBio</a> بجامعة هامبورغ، وبنطور <a href="https://apps.cosy.bio/StrucTFactor/" target="_blank" rel="noreferrer">StrucTFactor</a>، وهو برنامج بيستخدم الشبكات العصبية لتحليل الشبكات البيولوجية والتنبؤ بعوامل النسخ. البحث بتاعي بيركز على إزاي ممكن نستخدم التعلم العميق لفهم تنظيم الجينات والتحكم في النسخ.</p>
-<p>قبل كده، اشتغلت على تحليل تسلسل الـ RNA للخلايا المفردة (scRNA-seq)، وكنت بدرس الخلايا المناعية والخلايا الدهنية عشان أفهم علاقتها بالعوامل الأيضية وتطور الأمراض. شغلي كان مزيج بين علم الأحياء الحسابي وعلوم البيانات، وكنت بحاول أطلع رؤى مفيدة من بيانات التسلسل الضخمة.</p>
-<p>أنا مهتم بكل حاجة ليها علاقة بعلوم البيانات، الشبكات البيولوجية، وبيولوجيا الأنظمة، وعندي شغف باستخدام الأدوات الحسابية عشان نقدر نوصل لاكتشافات جديدة في علوم الحياة.</p>
-<p>أنا في الأصل من مصر، وجيت ألمانيا في الأول عشان أبدأ شغلي كصيدلي، لكن بعدين قررت أتابع شغفي بالمعلوماتية الحيوية. ده خلاني أكمل ماجستير في المعلوماتية الحيوية في <a href="https://www.uni-giessen.de/en/index" target="_blank" rel="noreferrer">جامعة جستوس ليبيج</a> في جيسن. بجانب البحث، بعمل محتوى على <a href="https://www.youtube.com/@MohamedAbouzidBio" target="_blank" rel="noreferrer">يوتيوب</a> عن الدراسة في ألمانيا، المعلوماتية الحيوية، وكمان نصائح عملية للطلاب المغتربين اللي عايزين يبدؤوا حياتهم في ألمانيا. تقدر تتابع مشاريعي على <a href="https://github.com/MohamedAbouzid1" target="_blank" rel="noreferrer">جيتهاب</a> وتقرأ عن تجاربي على <a href="">مدونتي</a>.</p>
+      <h3 id="أهلا-بيك-" class="relative group">أهلا بيك 👋 </h3><p>أنا محمد أبو زيد، عايش حاليًا في <a href="https://maps.app.goo.gl/PKU9iqXVBTLBE3Yd9" target="_blank" rel="noreferrer">هامبورج، ألمانيا</a>. بحب جدًا تعلم الآلة، واهتمامي الأساسي بالمعلوماتية الحيوية وعلم البيانات. دلوقتي بشتغل على رسالة الماجستير بتاعتي في <a href="https://www.cosy.bio/" target="_blank" rel="noreferrer">مختبر CosyBio</a> بجامعة هامبورج، وبنطور <a href="https://apps.cosy.bio/StrucTFactor/" target="_blank" rel="noreferrer">StrucTFactor</a>، وهو برنامج بيستخدم الشبكات العصبية لتحليل الشبكات البيولوجية والتنبؤ بعوامل النسخ. البحث بتاعي بيركز على إزاي ممكن نستخدم التعلم العميق لفهم تنظيم الجينات والتحكم في النسخ.</p>
+<p>قبل كده، اشتغلت على تحليل تسلسل الـ RNA للخلايا المفردة (scRNA-seq). شغلي كان مزيج بين علم الأحياء الحسابي وعلوم البيانات، وكنت بحاول أطلع رؤى مفيدة من بيانات التسلسل الضخمة.</p>
+<p>أنا مهتم بكل حاجة ليها علاقة بعلوم البيانات، والمعلوماتية الحيوية وتطبيقاتها.</p>
+<p>أنا مصري 🇪🇬، وجيت ألمانيا في الأول عشان أبدأ شغلي كصيدلي، لكن بعدين قررت أتابع شغفي بالمعلوماتية الحيوية. ده خلاني أكمل ماجستير في المعلوماتية الحيوية في <a href="https://www.uni-giessen.de/en/index" target="_blank" rel="noreferrer">جامعة جستوس ليبيج</a> في جيسن. بجانب البحث، بعمل محتوى على <a href="https://www.youtube.com/@MohamedAbouzidBio" target="_blank" rel="noreferrer">يوتيوب</a> عن الدراسة في ألمانيا، المعلوماتية الحيوية، وكمان نصائح عملية للطلاب المغتربين اللي عايزين يبدؤوا حياتهم في ألمانيا. تقدر تتابع مشاريعي على <a href="https://github.com/MohamedAbouzid1" target="_blank" rel="noreferrer">جيتهاب</a> وتقرأ عن تجاربي على <a href="">مدونتي</a>.</p>
 <h2 id="تقدر-تتواصل-معايا-على" class="relative group">تقدر تتواصل معايا على </h2><ul>
 <li><a href="https://github.com/MohamedAbouzid1" target="_blank" rel="noreferrer">جيتهاب</a></li>
 <li><a href="https://www.linkedin.com/in/mohamed-abouzid/" target="_blank" rel="noreferrer">لينكدإن</a></li>
